Bugfix- MenuBar border was too large on small screens

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -555,10 +555,6 @@ video {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -637,14 +633,14 @@ video {
 .h-4 {
   height: 1rem;
 }
-.h-4\/5 {
-  height: 80%;
-}
 .h-4\/6 {
   height: 66.666667%;
 }
 .h-40 {
   height: 10rem;
+}
+.h-5\/6 {
+  height: 83.333333%;
 }
 .h-6 {
   height: 1.5rem;
@@ -661,57 +657,11 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-1\/5 {
-  height: 20%;
-}
-.h-1\/3 {
-  height: 33.333333%;
-}
-.h-3\/4 {
-  height: 75%;
-}
-.h-\[32rem\] {
-  height: 32rem;
-}
-.h-\[16rem\] {
-  height: 16rem;
-}
-.h-5\/6 {
-  height: 83.333333%;
-}
-.h-1\/2 {
-  height: 50%;
-}
-.h-1\/6 {
-  height: 16.666667%;
-}
-.max-h-full {
-  max-height: 100%;
-}
-.max-h-28 {
-  max-height: 7rem;
-}
-.max-h-64 {
-  max-height: 16rem;
-}
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
-}
-.max-h-max {
-  max-height: max-content;
-}
-.max-h-min {
-  max-height: min-content;
-}
-.max-h-11 {
-  max-height: 2.75rem;
-}
 .max-h-96 {
   max-height: 24rem;
 }
-.w-1\/2 {
-  width: 50%;
+.max-h-full {
+  max-height: 100%;
 }
 .w-2\/5 {
   width: 40%;
@@ -721,6 +671,9 @@ video {
 }
 .w-3\/12 {
   width: 25%;
+}
+.w-3\/4 {
+  width: 75%;
 }
 .w-3\/5 {
   width: 60%;
@@ -749,17 +702,23 @@ video {
 .w-full {
   width: 100%;
 }
-.w-auto {
-  width: auto;
+.w-60 {
+  width: 15rem;
 }
-.w-\[16rem\] {
-  width: 16rem;
+.w-1\/2 {
+  width: 50%;
 }
-.w-3\/4 {
-  width: 75%;
+.w-\[2-\%\] {
+  width: 2-%;
 }
-.min-w-full {
-  min-width: 100%;
+.w-\[20\%\] {
+  width: 20%;
+}
+.w-\[10\%\] {
+  width: 10%;
+}
+.w-\[15\%\] {
+  width: 15%;
 }
 .max-w-3xl {
   max-width: 48rem;
@@ -769,16 +728,6 @@ video {
 }
 .max-w-screen-md {
   max-width: 768px;
-}
-.max-w-fit {
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-}
-.max-w-max {
-  max-width: max-content;
-}
-.max-w-full {
-  max-width: 100%;
 }
 .flex-auto {
   flex: 1 1 auto;
@@ -919,12 +868,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-cover {
-  background-size: cover;
-}
-.bg-center {
-  background-position: center;
-}
 .fill-red {
   fill: #ed4956;
 }
@@ -933,9 +876,6 @@ video {
 }
 .object-fill {
   object-fit: fill;
-}
-.object-none {
-  object-fit: none;
 }
 .p-1 {
   padding: 0.25rem;
@@ -1037,10 +977,6 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -1055,9 +991,6 @@ video {
 }
 .leading-none {
   line-height: 1;
-}
-.leading-relaxed {
-  line-height: 1.625;
 }
 .text-black-light {
   --tw-text-opacity: 1;
@@ -1087,9 +1020,6 @@ video {
 }
 .opacity-50 {
   opacity: 0.5;
-}
-.opacity-70 {
-  opacity: 0.7;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
